feat(DATA-1275): upgrade java version