@@ -28,9 +28,9 @@ import java.util.Locale;
  */
 public class MessageResolverMethod implements TemplateMethodModelEx {
 
-    private MessageSource messageSource;
+    private final MessageSource messageSource;
 
-    private Locale locale;
+    private final Locale locale;
 
     public MessageResolverMethod(MessageSource messageSource, Locale locale) {
         this.locale = locale;
@@ -40,10 +40,10 @@ public class MessageResolverMethod implements TemplateMethodModelEx {
 
     @Override
     public Object exec(List arguments) throws TemplateModelException {
-        if (arguments.size() < 1) {
+        if (arguments.isEmpty()) {
             throw new TemplateModelException("Wrong number of arguments");
         }
-        SimpleScalar arg = (SimpleScalar) arguments.get(0);
+        SimpleScalar arg = (SimpleScalar) arguments.getFirst();
         String code = arg.getAsString();
         if (code == null || code.isEmpty()) {
             throw new TemplateModelException("Invalid code value '" + code + "'");
